--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,4 @@
+@import 'https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css';
 .nav-wrapper {
     padding: 0 16rem;
 
